<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/new_changes"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/update_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="--"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/last_change"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update_last_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="5dp"
            android:text="-"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/update_check"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/check"
        android:textSize="20sp" />


        <Button
            android:id="@+id/update_load"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/download"
            android:enabled="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/update_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/exit"
            android:textSize="20sp" />

</LinearLayout>